--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>TextVis</title>
+    <title>Help Machines Judge Movie Review Sentiment</title>
     <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="./lib/bootstrap/css/bootstrap-slider.min.css">
