--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body ng-controller="ArtificalController"
-        class="jumbotron">
+        class="jumbotron" style="background: #f5f5f5">
 <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="">
         <div class="col-md-12">
